--- a/styles/base.css
+++ b/styles/base.css
@@ -53,23 +53,26 @@ img {
 }
 
 
-.navbar li:hover {
+.navbar a:hover {
     background-color: #FAC9B8;
     cursor: pointer;
 }
 
 
 .navbar a {
+    display: block;
+    padding: 1rem;
+    margin: 0;
     text-decoration: none;
     font-weight: 500;
     color: #000;
+    flex-grow: 1;
 }
 
 .navbar li {
     list-style: none;
-    flex-grow: 1;
     text-align: center;
-    padding: 1rem;
+    flex-grow: 1;
 }
 
 main {
