--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -74,6 +74,7 @@ h2 {
 
 h3 {
     text-align: center;
+    font-size: 1.2rem;
 }
 
 main {
@@ -87,7 +88,7 @@ main {
 
 img {
     width: 100%;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.8);  
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.8);
 }
 
 p {
@@ -95,11 +96,12 @@ p {
     font-weight: 400;
     font-style: normal;
     text-align: center;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .label-location, .label-dedicated, .label-area {
     font-weight: 700;
+    font-size: 0.9rem;
 }
 footer {
     text-align: center;
@@ -117,4 +119,6 @@ section {
     padding: 1rem;
     margin-bottom: 1rem;
     background-color: rgb(238, 235, 235);
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
