Fixed issue with Lighthouse score

--- a/styles/filtered-temples-large.css
+++ b/styles/filtered-temples-large.css
@@ -44,5 +44,12 @@
         font-size: 2rem;
         margin-bottom: 4rem;
     }
+
+    .label-location, .label-dedicated, .label-area {
+        font-size: 0.8rem;
+    }
+    p {
+        font-size: 1rem;
+    }
     
 }
