--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -89,6 +89,7 @@ main {
 img {
     width: 100%;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.8);
+    height: auto;
 }
 
 p {
@@ -96,12 +97,14 @@ p {
     font-weight: 400;
     font-style: normal;
     text-align: center;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 .label-location, .label-dedicated, .label-area {
     font-weight: 700;
-    font-size: 0.9rem;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    color: rgb(118, 93, 177);
 }
 footer {
     text-align: center;
@@ -116,9 +119,10 @@ footer {
 section {
     border: 1px solid #bfc5c6;
     border-radius: 5px;
-    padding: 1rem;
+    padding: 1.5rem;
     margin-bottom: 1rem;
     background-color: rgb(238, 235, 235);
     margin-left: 2rem;
     margin-right: 2rem;
+    min-height: 200px;
 }
